@@ -49,7 +49,7 @@ import edu.stanford.nlp.util.logging.Redwood;
 public class EnglishTreebankParserParams extends AbstractTreebankParserParams  {
 
   /** A logger for this class */
-  private static Redwood.RedwoodChannels log = Redwood.channels(EnglishTreebankParserParams.class);
+  private static final Redwood.RedwoodChannels log = Redwood.channels(EnglishTreebankParserParams.class);
 
   protected class EnglishSubcategoryStripper implements TreeTransformer {
 
@@ -156,9 +156,9 @@ public class EnglishTreebankParserParams extends AbstractTreebankParserParams  {
 
   private HeadFinder headFinder;
 
-  private EnglishTrain englishTrain = new EnglishTrain();
+  private final EnglishTrain englishTrain = new EnglishTrain();
 
-  private EnglishTest englishTest = new EnglishTest();
+  private final EnglishTest englishTest = new EnglishTest();
 
   @Override
   public HeadFinder headFinder() {
@@ -2208,7 +2208,7 @@ public class EnglishTreebankParserParams extends AbstractTreebankParserParams  {
       i += 2;
     } else if (args[i].equalsIgnoreCase("-headFinder") && (i + 1 < args.length)) {
       try {
-        headFinder = (HeadFinder) Class.forName(args[i + 1]).newInstance();
+        headFinder = (HeadFinder) Class.forName(args[i + 1]).getDeclaredConstructor().newInstance();
       } catch (Exception e) {
         log.info("Error: Unable to load HeadFinder; default HeadFinder will be used.");
         e.printStackTrace();
