@@ -1,21 +1,20 @@
 package edu.stanford.nlp.trees; 
-import edu.stanford.nlp.util.logging.Redwood;
 
 import java.io.*;
 import java.util.*;
 import java.text.NumberFormat;
 import java.text.DecimalFormat;
+import java.util.function.Predicate;
 
 import edu.stanford.nlp.io.IOUtils;
 import edu.stanford.nlp.io.NumberRangesFileFilter;
-import java.util.function.Predicate;
-
 import edu.stanford.nlp.ling.SentenceUtils;
-import edu.stanford.nlp.util.Timing;
 import edu.stanford.nlp.ling.TaggedWord;
 import edu.stanford.nlp.stats.TwoDimensionalCounter;
 import edu.stanford.nlp.stats.Counter;
 import edu.stanford.nlp.util.ReflectionLoading;
+import edu.stanford.nlp.util.Timing;
+import edu.stanford.nlp.util.logging.Redwood;
 
 
 /** This is just a main method and other static methods for
@@ -29,7 +28,7 @@ import edu.stanford.nlp.util.ReflectionLoading;
 public class Treebanks  {
 
   /** A logger for this class */
-  private static Redwood.RedwoodChannels log = Redwood.channels(Treebanks.class);
+  private static final Redwood.RedwoodChannels log = Redwood.channels(Treebanks.class);
 
   private Treebanks() {} // static methods
 
@@ -41,18 +40,22 @@ public class Treebanks  {
     log.info("\t-pennPrint\t-encoding enc\t-tlp class\t-sentenceLengths");
     log.info("\t-summary\t-decimate\t-yield\t-correct\t-punct");
     log.info("\t-oneLine\t-words\t-taggedWords\t-annotate options");
+    log.info("\t-filter <class>: class implements Predicate<Tree>, this filters trees which return false");
   }
 
   /**
    * Loads treebank and prints it.
-   * All files below the designated <code>filePath</code> within the given
-   * number range if any are loaded.  You can normalize the trees or not
-   * (English-specific) and print trees one per line up to a certain length
-   * (for EVALB).
+   * All files below the designated {@code filePath} within the given
+   * number range if any are loaded.<p>
+   * By default, this class works over raw trees.
+   * You can normalize the trees as we usually do in an English-specific way by using either of the flags:
+   * {@code -normalized} or {@code -trf edu.stanford.nlp.trees.LabeledScoredTreeReaderFactory}.
+   * You can normalize for different treebanks by loading an appropriate TreeReaderFactory.
+   * You can print trees one per line up to a certain length (for EVALB) and many other things.
    * <p>
-   * Usage: <code>
-   * java edu.stanford.nlp.trees.Treebanks [-maxLength n|-normalize|-treeReaderFactory class] filePath [numberRanges]
-   * </code>
+   * Usage: {@code
+   * java edu.stanford.nlp.trees.Treebanks [-maxLength n|-normalized|-treeReaderFactory class] filePath [numberRanges]
+   * }
    *
    * @param args Array of command-line arguments
    * @throws java.io.IOException If there is a treebank file access problem
@@ -104,7 +107,7 @@ public class Treebanks  {
         i += 1;
       } else if (args[i].equalsIgnoreCase("-tlp")) {
         try {
-          final Object o = Class.forName(args[i+1]).newInstance();
+          final Object o = Class.forName(args[i+1]).getDeclaredConstructor().newInstance();
           tlp = (TreebankLanguagePack) o;
           trf = tlp.treeReaderFactory();
         } catch (Exception e) {
@@ -114,7 +117,7 @@ public class Treebanks  {
         i += 2;
       } else if (args[i].equals("-treeReaderFactory") || args[i].equals("-trf")) {
         try {
-          final Object o = Class.forName(args[i+1]).newInstance();
+          final Object o = Class.forName(args[i+1]).getDeclaredConstructor().newInstance();
           trf = (TreeReaderFactory) o;
         } catch (Exception e) {
           log.info("Couldn't instantiate as TreeReaderFactory: " + args[i+1]);
@@ -198,15 +201,26 @@ public class Treebanks  {
 
     final PrintWriter pw = new PrintWriter(new OutputStreamWriter(System.out, encoding), true);
 
-    if (i + 1 < args.length ) {
-      treebank.loadPath(args[i], new NumberRangesFileFilter(args[i+1], true));
-    } else if (i < args.length) {
-      treebank.loadPath(args[i], suffix, true);
-    } else {
+    if (i >= args.length) {
       printUsage();
       return;
     }
-    // log.info("Loaded " + treebank.size() + " trees from " + args[i]);
+    while (i < args.length) {
+      if (i + 1 < args.length) {
+        try {
+          treebank.loadPath(args[i], new NumberRangesFileFilter(args[i + 1], true));
+          i += 2;
+        } catch (IllegalArgumentException iae) {
+          // next thing wasn't a number range
+          treebank.loadPath(args[i], suffix, true);
+          i++;
+        }
+      } else {
+        treebank.loadPath(args[i], suffix, true);
+        i++;
+      }
+      // log.info("Loaded " + treebank.size() + " trees from " + args[i]);
+    }
 
     if (annotationOptions != null) {
       // todo Not yet implemented
@@ -351,7 +365,7 @@ public class Treebanks  {
     log.info("There were " + num + " words in the treebank.");
 
     treebank.apply(new TreeVisitor() {
-        int num = 0;
+        int num; // = 0;
         @Override
         public void visitTree(final Tree t) {
           num += t.yield().size();
@@ -430,8 +444,5 @@ public class Treebanks  {
     System.out.println("Longest sentence is of length: " + longestSeen);
     pw.println(longSent);
   }
-
-
-
 
 }
